Fix's flexbox on mobile

--- a/child-theme/css/child-theme-custom.css
+++ b/child-theme/css/child-theme-custom.css
@@ -530,6 +530,11 @@ body:not(#en__pagebuilder) #main-content .banner-image{
 
 @media (max-width: 960px){
 
+	/* Override EN Default Behavior */
+	.en__component--row.en__component--advrow {
+		display: flex;
+	}
+
 	.hide-medium{
 		display: none !important;	
 	}
